==> uYanki/emkit/STM32F407V/2_components/device/lowlevel/stm32hal/lowlevel.c <==
#include "pindefs.h"
#define LOG_LOCAL_TAG   "drv_pin"
#define LOG_LOCAL_LEVEL LOG_LEVEL_INFO

static status_t PIN_SetMode(const pin_t* pHandle, pin_mode_e eMode, pin_pull_e ePull)
{
    GPIO_InitTypeDef GPIO_InitStruct;

    switch (eMode)
    {
        case PIN_MODE_INPUT_FLOATING: GPIO_InitStruct.Mode = GPIO_MODE_INPUT; break;
        case PIN_MODE_OUTPUT_OPEN_DRAIN: GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD; break;
        case PIN_MODE_OUTPUT_PUSH_PULL: GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP; break;
        case PIN_MODE_HIGH_RESISTANCE: HAL_GPIO_DeInit(pHandle->Port, pHandle->Pin); return ERR_NONE;
        default: return ERR_INVALID_VALUE;  // invaild in/out mode
    }

    switch (ePull)
    {
        case PIN_PULL_NONE: GPIO_InitStruct.Pull = GPIO_NOPULL; break;
        case PIN_PULL_DOWN: GPIO_InitStruct.Pull = GPIO_PULLDOWN; break;
        case PIN_PULL_UP: GPIO_InitStruct.Pull = GPIO_PULLUP; break;
        default: return ERR_INVALID_VALUE;  // invaild pull mode
    }

    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
    GPIO_InitStruct.Pin   = pHandle->Pin;
    HAL_GPIO_Init(pHandle->Port, &GPIO_InitStruct);

    return ERR_NONE;
}

static inline status_t HWI2C_Master_Init(i2c_mst_t* pHandle, uint32_t u32ClockFreqHz, i2c_duty_cycle_e eDutyCycle)
{
    I2C_HandleTypeDef* hwi2c = (I2C_HandleTypeDef*)(pHandle->I2Cx);

    if (
#ifdef I2C1
        hwi2c->Instance == I2C1 ||
#endif
#ifdef I2C2
        hwi2c->Instance == I2C2 ||
#endif
#ifdef I2C3
        hwi2c->Instance == I2C3 ||
#endif
#ifdef I2C4
        hwi2c->Instance == I2C4 ||
#endif
#ifdef I2C5
        hwi2c->Instance == I2C5 ||
#endif
        0)
    {
        return ERR_NONE;
    }

    // invalid instance
    return ERR_INVALID_VALUE;  // unknown instance
}

static inline bool HWI2C_Master_IsDeviceReady(i2c_mst_t* pHandle, uint8_t u16SlvAddr, uint16_t u16Flags)
{
    I2C_HandleTypeDef* hwi2c = (I2C_HandleTypeDef*)(pHandle->I2Cx);
    return HAL_I2C_IsDeviceReady(hwi2c, u16SlvAddr << 1, 5, I2C_TIMEOUT) == HAL_OK;
}

static inline status_t HWI2C_Master_ReadBlock(i2c_mst_t* pHandle, uint16_t u16SlvAddr, uint16_t u16MemAddr, uint8_t* pu8Data, uint16_t u16Size, uint16_t u16Flags)
{
    I2C_HandleTypeDef* hwi2c          = (I2C_HandleTypeDef*)(pHandle->I2Cx);
    uint16_t           u16MemAddrSize = CHKMSK16(u16Flags, I2C_FLAG_MEMADDR_SIZE_Msk, I2C_FLAG_MEMADDR_16BIT) ? I2C_MEMADD_SIZE_16BIT : I2C_MEMADD_SIZE_8BIT;
    MakeError_(HAL_I2C_Mem_Read(hwi2c, u16SlvAddr << 1, u16MemAddr, u16MemAddrSize, pu8Data, u16Size, I2C_TIMEOUT));
}

static inline status_t HWI2C_Master_WriteBlock(i2c_mst_t* pHandle, uint16_t u16SlvAddr, uint16_t u16MemAddr, const uint8_t* cpu8Data, uint16_t u16Size, uint16_t u16Flags)
{
    I2C_HandleTypeDef* hwi2c          = (I2C_HandleTypeDef*)(pHandle->I2Cx);
    uint16_t           u16MemAddrSize = CHKMSK16(u16Flags, I2C_FLAG_MEMADDR_SIZE_Msk, I2C_FLAG_MEMADDR_16BIT) ? I2C_MEMADD_SIZE_16BIT : I2C_MEMADD_SIZE_8BIT;
    MakeError_(HAL_I2C_Mem_Write(hwi2c, u16SlvAddr << 1, u16MemAddr, u16MemAddrSize, (uint8_t*)cpu8Data, u16Size, I2C_TIMEOUT));
}

static inline status_t HWI2C_Master_ReceiveBlock(i2c_mst_t* pHandle, uint16_t u16SlvAddr, uint8_t* pu8Data, uint16_t u16Size, uint16_t u16Flags)
{
    I2C_HandleTypeDef* hwi2c = (I2C_HandleTypeDef*)(pHandle->I2Cx);
    MakeError_(HAL_I2C_Master_Transmit(hwi2c, u16SlvAddr << 1, (uint8_t*)pu8Data, u16Size, I2C_TIMEOUT));
}

static inline status_t HWI2C_Master_TransmitBlock(i2c_mst_t* pHandle, uint16_t u16SlvAddr, const uint8_t* cpu8Data, uint16_t u16Size, uint16_t u16Flags)
{
    I2C_HandleTypeDef* hwi2c = (I2C_HandleTypeDef*)(pHandle->I2Cx);
    MakeError_(HAL_I2C_Master_Transmit(hwi2c, u16SlvAddr << 1, (uint8_t*)cpu8Data, u16Size, I2C_TIMEOUT));
}

static status_t HWSPI_Master_Init(spi_mst_t* pHandle, uint32_t u32ClockSpeedHz, spi_duty_cycle_e eDutyCycle, uint16_t u16Flags)
{
    SPI_HandleTypeDef* hwspi = (SPI_HandleTypeDef*)(pHandle->SPIx);

    if (
#ifdef SPI1
        hwspi->Instance == SPI1 ||
#endif
#ifdef SPI2
        hwspi->Instance == SPI2 ||
#endif
#ifdef SPI3
        hwspi->Instance == SPI3 ||
#endif
#ifdef SPI4
        hwspi->Instance == SPI4 ||
#endif
#ifdef SPI5
        hwspi->Instance == SPI5 ||
#endif
        0)
    {
        return ERR_NONE;
    }

    // invalid instance
    return ERR_INVALID_VALUE;  // unknown instance
}

static status_t HWSPI_Master_TransmitBlock(spi_mst_t* pHandle, const uint8_t* cpu8TxData, uint16_t u16Size)
{
    SPI_HandleTypeDef* hwspi = (SPI_HandleTypeDef*)(pHandle->SPIx);
    MakeError_(HAL_SPI_Transmit(hwspi, (uint8_t*)cpu8TxData, u16Size, SPI_TIMEOUT));
}

static status_t HWSPI_Master_ReceiveBlock(spi_mst_t* pHandle, uint8_t* pu8RxData, uint16_t u16Size)
{
    SPI_HandleTypeDef* hwspi = (SPI_HandleTypeDef*)(pHandle->SPIx);
    MakeError_(HAL_SPI_Receive(hwspi, pu8RxData, u16Size, SPI_TIMEOUT));
}

static status_t HWSPI_Master_TransmitReceiveBlock(spi_mst_t* pHandle, const uint8_t* cpu8TxData, uint8_t* pu8RxData, uint16_t u16Size)
{
    SPI_HandleTypeDef* hwspi = (SPI_HandleTypeDef*)(pHandle->SPIx);
    MakeError_(HAL_SPI_TransmitReceive(hwspi, (uint8_t*)cpu8TxData, pu8RxData, u16Size, SPI_TIMEOUT));
}
